fixed blurry image cards

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -77,6 +77,11 @@ textarea.form-control {
     font-size: 0.9rem;
 }
 
+.travel-card-img {
+    height: 300px;
+    object-fit: cover;
+}
+
 // Utility classes
 
 .truncate {
